version 1.1.0
- Added support for SDMX codelists from SDMX REST APIs, see
  'sdmx_codelist', 'estat_codelist', 'global_codelist'.
- Fix: 'aggregate' would fail for validations based on empty data frames (thanks
  to Matthials Gomolka for reporting).
- Fix: empty names in a data frame passed as '.data' to 'validator' would
  yield empty names in the resulting 'validator' object. (Thanks to Wytze
  Gelderloos for reporting)

version 1.0.4
- Added 'rmarkdown' to 'Suggests' as requested by CRAN
- Small updates for compatibility with new version of 'settings'

version 1.0.2
- Updated CITATION since paper will be published by JSS (Thanks to Achim Zeileis).
- Improved 'print' method of all objects inheriting from 'confrontation' (#129)
- 'compare' now also works with 'tibble' objects -- who disguise themselves
  as data frames but behave differently.
- Fix: add_indicators() would fail or not add results properly in some
  cases. (Thanks to Jos de Waard for reporting #128).
- Fix: 'as.data.frame' would fail for validator objects where at least 
  one of the rules contained a var_group(). (Thanks to Matthias Gomolka
  for reporting). The issue with 'var_group', and ':=' assignments is that 
  the expanded list of expressions generated by a validator is not one-to-one 
  with the original list of expressions in the validator. Therefore the
  (internal) `$exprs()` method now adds an attribute to each expression
  it outputs, called 'reference' that is an index into the original
  validator object.
- Fix: Parsing yaml files would crash when the 'expr' field is empty
  (Thanks to Matthias Gomolka for reporting).

version 1.0.1
- Fixed URL issues caught by CRAN but not by R CMD check --as-cran.


version 1.0.0
- Added The Data Validation Cookbook as vignette. See also
  <https://data-cleaning.github.io/validate>
- Improved visualisation of validation output using 'plot'. The 'barplot'
  method for 'confrontation' objects is now deprecated and will be removed
  eventually.